docs-archive/apache-airflow-providers-cncf-kubernetes/10.11.0/_sources/_api/airflow/providers/cncf/kubernetes/kubernetes_helper_functions/index.rst.txt
airflow.providers.cncf.kubernetes.kubernetes_helper_functions
=============================================================

.. py:module:: airflow.providers.cncf.kubernetes.kubernetes_helper_functions


Attributes
----------

.. autoapisummary::

   airflow.providers.cncf.kubernetes.kubernetes_helper_functions.log
   airflow.providers.cncf.kubernetes.kubernetes_helper_functions.alphanum_lower
   airflow.providers.cncf.kubernetes.kubernetes_helper_functions.POD_NAME_MAX_LENGTH
   airflow.providers.cncf.kubernetes.kubernetes_helper_functions.API_RETRIES
   airflow.providers.cncf.kubernetes.kubernetes_helper_functions.API_RETRY_WAIT_MIN
   airflow.providers.cncf.kubernetes.kubernetes_helper_functions.API_RETRY_WAIT_MAX
   airflow.providers.cncf.kubernetes.kubernetes_helper_functions.TRANSIENT_STATUS_CODES


Exceptions
----------

.. autoapisummary::

   airflow.providers.cncf.kubernetes.kubernetes_helper_functions.PodLaunchFailedException
   airflow.providers.cncf.kubernetes.kubernetes_helper_functions.KubernetesApiException


Classes
-------

.. autoapisummary::

   airflow.providers.cncf.kubernetes.kubernetes_helper_functions.WaitRetryAfterOrExponential


Functions
---------

.. autoapisummary::

   airflow.providers.cncf.kubernetes.kubernetes_helper_functions.generic_api_retry
   airflow.providers.cncf.kubernetes.kubernetes_helper_functions.rand_str
   airflow.providers.cncf.kubernetes.kubernetes_helper_functions.add_unique_suffix
   airflow.providers.cncf.kubernetes.kubernetes_helper_functions.create_unique_id
   airflow.providers.cncf.kubernetes.kubernetes_helper_functions.annotations_to_key
   airflow.providers.cncf.kubernetes.kubernetes_helper_functions.get_logs_task_metadata
   airflow.providers.cncf.kubernetes.kubernetes_helper_functions.annotations_for_logging_task_metadata


Module Contents
---------------

.. py:data:: log

.. py:data:: alphanum_lower
   :value: 'abcdefghijklmnopqrstuvwxyz0123456789'


.. py:data:: POD_NAME_MAX_LENGTH
   :value: 63


.. py:exception:: PodLaunchFailedException

   Bases: :py:obj:`airflow.exceptions.AirflowException`


   When pod launching fails in KubernetesPodOperator.


.. py:exception:: KubernetesApiException

   Bases: :py:obj:`airflow.exceptions.AirflowException`


   When communication with kubernetes API fails.


.. py:data:: API_RETRIES

.. py:data:: API_RETRY_WAIT_MIN

.. py:data:: API_RETRY_WAIT_MAX

.. py:data:: TRANSIENT_STATUS_CODES

.. py:class:: WaitRetryAfterOrExponential

   Bases: :py:obj:`tenacity.wait.wait_base`


   Wait strategy that honors Retry-After header on 429, else falls back to exponential backoff.


   .. py:method:: __call__(retry_state)


.. py:function:: generic_api_retry(func)

   Retry to Kubernetes API calls.

   - Retries only transient ApiException status codes.
   - Honors Retry-After on 429.


.. py:function:: rand_str(num)

   Generate random lowercase alphanumeric string of length num.

   :meta private:


.. py:function:: add_unique_suffix(*, name, rand_len = 8, max_len = POD_NAME_MAX_LENGTH)

   Add random string to pod or job name while staying under max length.

   :param name: name of the pod or job
   :param rand_len: length of the random string to append
   :param max_len: maximum length of the pod name
   :meta private:


.. py:function:: create_unique_id(dag_id = None, task_id = None, *, max_length = POD_NAME_MAX_LENGTH, unique = True)

   Generate unique pod or job ID given a dag_id and / or task_id.

   :param dag_id: DAG ID
   :param task_id: Task ID
   :param max_length: max number of characters
   :param unique: whether a random string suffix should be added
   :return: A valid identifier for a kubernetes pod name


.. py:function:: annotations_to_key(annotations)

   Build a TaskInstanceKey based on pod annotations.


.. py:function:: get_logs_task_metadata()

.. py:function:: annotations_for_logging_task_metadata(annotation_set)

